# pytorch-custom-cuda-ops

./: .gitignore  pyproject.toml  todo.md
01_jit/: Makefile  test.py
02_setuptools/: Makefile  setup.py  test.py
02_setuptools/csrc/: binding.cpp  softmax_ori.cu
02_setuptools/online_softmax/: __init__.py
03_cmake/: CMakeLists.txt  build.sh  test.py
03_cmake/src/: softmax_kernel.cu
